all change respective to host website

--- a/views/user registration.html
+++ b/views/user registration.html
@@ -249,7 +249,7 @@
                 
                 console.log('Sending registration data:', userData);
                 
-                const response = await fetch('http://localhost:5000/api/customers/register', {
+                const response = await fetch("https://roadside-helper.onrender.com/api/customers/register", {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
