--- a/views/user registration.html
+++ b/views/user registration.html
@@ -248,7 +248,9 @@
                 };
                 
                 console.log('Sending registration data:', userData);
-                
+                //commented out for local  
+                //const response = await fetch("http://localhost:5000/api/customers/register", {
+ 
                 const response = await fetch("https://roadside-helper.onrender.com/api/customers/register", {
                     method: 'POST',
                     headers: {
