--- a/views/reqcust.html
+++ b/views/reqcust.html
@@ -223,6 +223,7 @@
                 <label for="serviceType">Service Type</label>
                 <select id="serviceType" name="serviceType" required>
                     <option value="">Select Service Type</option>
+                    <option value="towing">Towing</option>
                     <option value="emergency">Emergency Service</option>
                     <option value="repair">Repair</option>
                     <option value="maintenance">Maintenance</option>
