add and modified mecprofile

--- a/views/mecprofile.html
+++ b/views/mecprofile.html
@@ -326,7 +326,7 @@
         </div>
     </div>
     <div class="profile-container">
-        <img class="profilepic" alt="Mechanic Profile Picture" src="profitle.jpg">
+        <img class="profilepic" alt="Mechanic Profile Picture" src="mechanicpro.jpg">
         <h2>Mechanic Profile</h2>
         <div class="profile-info">
             <p>
