--- a/views/dashcust.html
+++ b/views/dashcust.html
@@ -295,8 +295,8 @@
             <img alt="User Profile Logo" src="mechanic.png"/>
             <h1>Customer Dashboard</h1>
         </div>
-        <button class="header-logout" onclick="handleLogout()">
-            <i class="fas fa-sign-out-alt"></i> Logout
+        <button class="header-logout" onclick="window.location.href='userprofile.html'">
+            <i class="fas fa-sign-out-alt"></i>profile 
         </button>
     </div>
 
